--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,11 @@
 <resources>
     <color name="colorPrimary">#F57C00</color>
     <color name="colorPrimaryDark">#bb6008</color>
+<!--
     <color name="colorAccent">#795548</color>
+-->
+    <color name="colorAccent">#bb6008</color>
+
     <color name="colorWhite">#FFFFFF</color>
 
     <!--        <color name="titlebackgroundcolor">#bb6008</color>
